# ForecastService

./: .gitignore  Dockerfile  README.md  enviroment_variables.env  pyproject.toml
.github/workflows/: deploy.yml
data_seeding/: create_bundles.py  create_database.py  create_disputes.py  create_reservations.py  create_seeding_files.py  create_user_streaks.py  create_users.py  save_weather_data.py
data_seeding/database/: allergens.csv  bundles.csv  bundles_products.csv  categories.csv  disputes.csv  reservations.csv  users.csv  vendors.csv  vendors_products.csv
data_seeding/database_files/: bundles_products.csv  disputes.csv  opening_hours.csv  products_allergens.csv  reservations.csv  users.csv
data_seeding/database_seeding_files/: products_seeding.csv  reservations_seeding.csv  users_seeding.csv  vendors.csv
data_seeding/dataset/: collection_dataset.csv  dataset.csv  reservation_dataset.csv
data_seeding/normalisation_files/: categories.csv  weather.csv
data_seeding/probabilities/: category.csv  collection_time.csv  day_of_week.csv  discount.csv  lead_time.csv  price.csv  temperature.csv  weather_condition.csv  window_length.csv
data_seeding/probability_modifiers/: collection_time.csv  time_between_reservation_and_collection.csv
data_seeding/user_creation_data/: adjectives.csv  email_providers.txt  nouns.csv
data_seeding/weather_files/: save_weather_data.py  weather_data_exeter.csv
k8s/: deploy.yaml
sql_scripts/: insert_allergies.sql  insert_vendors.sql
src/: auth.py  database.py  main.py  schemas.py  services.py  web_client.py
src/forecast/: auth.py  database.py  main.py  web_client.py
src/ml/: dataset.csv  pipeline_collection.pkl  pipeline_reservation.pkl  train_model.py
src/tests/: test_main.py
tests/: test_api.py  test_main.py
